# HUST_graphics

./: .gitignore  README.md
ex1/: CMakeCache.txt  CMakeLists.txt  QUICKSTART.md  README.md  cmake_install.cmake
ex1/.claude/: settings.local.json
ex1/pygame_version/: README_PYGAME.md  sun_earth_moon_pygame.py
ex1/shaders/: fragment_shader.glsl
ex1/src/: main.cpp
ex2/: CMakeLists.txt  Makefile  QUICKSTART.md  README.md  build.bat  generate_textures.cpp  rebuild.bat  run.bat  setup_dependencies.bat
ex2/.claude/: settings.local.json
ex2/shaders/: fragment_shader.glsl
ex2/src/: main.cpp
